Migrated to Spigot 1.16.4